refactor: fix user search dashboard in admin feature and refactor code